--- a/templates/crmapp/dashboard.html
+++ b/templates/crmapp/dashboard.html
@@ -44,6 +44,16 @@
                     <th>Update</th>
                     <th>Remove</th>
                 </tr>
+
+                {% for order in orders %}
+                <tr>
+                    
+                    <td>{{ order.product }}</td>
+                    <td>{{ order.data_created }}</td>
+                    <td>{{ order.status }}</td>
+                </tr>
+                {% endfor %}
+
             </table>
         </div>
     </div>
