Add and render data to customer template

--- a/templates/crmapp/dashboard.html
+++ b/templates/crmapp/dashboard.html
@@ -51,8 +51,8 @@
                     <td>{{ order.product }}</td>
                     <td>{{ order.data_created }}</td>
                     <td>{{ order.status }}</td>
-                    <td><a href="">Update</a></td>
-                    <td><a href="">Delate</a></td>
+                    <td><a class="btn btn-sm btn-info" href="">Update</a></td>
+                    <td><a class="btn btn-sm btn-danger" href="">Delate</a></td>
 
                 </tr>
                 {% endfor %}
