--- a/templates/crmapp/customer.html
+++ b/templates/crmapp/customer.html
@@ -19,15 +19,15 @@
         <div class="card card-body">
             <h5>Contact Information</h5>
             <hr>
-            <p>Email: </p>
-            <p>Phone: </p>
+            <p>Email: {{ customer.email }} </p>
+            <p>Phone: {{ customer.phone }}</p>
         </div>
     </div>
     <div class="col-md">
         <div class="card card-body">
             <h5>Total Orders</h5>
             <hr>
-            <h1 class="orders"></h1>
+            <h1 class="orders">{{ order_count }}</h1>
         </div>
     </div>
 </div>
@@ -54,6 +54,18 @@
                     <th>Update</th>
                     <th>Remove</th>
                 </tr>
+
+                {% for order in orders %}
+                <tr>
+                    <td>{{ order.product }}</td>
+                    <td>{{ order.product.category }}</td>
+                    <td>{{ order.data_created }}</td>
+                    <td>{{ order.status }}</td>
+                    <td><a class="btn btn-sm btn-info" href="">Update</a></td>
+                    <td><a class="btn btn-sm btn-danger" href="">Remove</a></td>
+                </tr>
+                {% endfor %}
+
             </table>
         </div>
     </div>
