Add update funcionality with urls and views

--- a/templates/crmapp/customer.html
+++ b/templates/crmapp/customer.html
@@ -59,7 +59,7 @@
                 <tr>
                     <td>{{ order.product }}</td>
                     <td>{{ order.product.category }}</td>
-                    <td>{{ order.data_created }}</td>
+                    <td>{{ order.date_created }}</td>
                     <td>{{ order.status }}</td>
                     <td><a class="btn btn-sm btn-info" href="">Update</a></td>
                     <td><a class="btn btn-sm btn-danger" href="">Remove</a></td>
