--- a/templates/crmapp/dashboard.html
+++ b/templates/crmapp/dashboard.html
@@ -50,9 +50,9 @@
                 <tr>
 
                     <td>{{ order.product }}</td>
-                    <td>{{ order.data_created }}</td>
+                    <td>{{ order.date_created }}</td>
                     <td>{{ order.status }}</td>
-                    <td><a class="btn btn-sm btn-info" href="">Update</a></td>
+                    <td><a class="btn btn-sm btn-info" href="{% url 'update_order' order.id %}">Update</a></td>
                     <td><a class="btn btn-sm btn-danger" href="">Delate</a></td>
 
                 </tr>
