--- a/templates/crmapp/customer.html
+++ b/templates/crmapp/customer.html
@@ -48,7 +48,7 @@
             <table class="table table-sm">
                 <tr>
                     <th>Product</th>
-                    <th>Category</th>
+                    <th>Note</th>
                     <th>Date Ordered</th>
                     <th>Status</th>
                     <th>Update</th>
@@ -58,7 +58,7 @@
                 {% for order in orders %}
                 <tr>
                     <td>{{ order.product }}</td>
-                    <td>{{ order.product.category }}</td>
+                    <td>{{ order.note }}</td>
                     <td>{{ order.date_created }}</td>
                     <td>{{ order.status }}</td>
                     <td><a class="btn btn-sm btn-info" href="{% url 'update_order' order.id %}">Update</a></td>
