--- a/templates/crmapp/navbar.html
+++ b/templates/crmapp/navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <style>
-    .hello-msg{
+    .hello-msg {
         font-size: 18px;
         color: #fff;
         margin-right: 20px;
@@ -23,6 +23,10 @@
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'products' %}">Products</a>
             </li>
+            {% else %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'account' %}">Settings</a>
+              </li>
             {% endif %}
         </ul>
     </div>
