Change some style

--- a/templates/crmapp/dashboard.html
+++ b/templates/crmapp/dashboard.html
@@ -4,15 +4,13 @@
 
 {% include 'crmapp/status.html' %}
 
-
 <br>
 
 <div class="row">
     <div class="col-md-5">
         <h5>CUSTOMERS:</h5>
-        <hr>
         <div class="card card-body">
-            <a class="btn btn-primary  btn-sm btn-block" href="">Create Customer</a>
+            <!-- <a class="btn btn-primary  btn-sm btn-block" href="">Create Customer</a> -->
             <table class="table table-sm">
                 <tr>
                     <th></th>
@@ -33,8 +31,7 @@
     </div>
 
     <div class="col-md-7">
-        <h5>LAST 5 ORDERS</h5>
-        <hr>
+        <h5>LAST ORDERS</h5>
         <div class="card card-body">
             <table class="table table-sm">
                 <tr>
