--- a/templates/crmapp/base.html
+++ b/templates/crmapp/base.html
@@ -24,6 +24,7 @@
     <hr>
 
     <style>
+        
         footer {
             position: absolute;
             left: 0;
@@ -42,26 +43,28 @@
             <!-- Section: Social media -->
             <section class="mb-4">
                 <!-- Facebook -->
-                <a class="btn text-white btn-floating m-1" style="background-color: #3b5998;" href="https://www.facebook.com/" target="_blank" role="button"><i
-                        class="fab fa-facebook-f"></i></a>
+                <a class="btn text-white btn-floating m-1" style="background-color: #3b5998;"
+                    href="https://www.facebook.com/" target="_blank" role="button"><i class="fab fa-facebook-f"></i></a>
 
                 <!-- Twitter -->
-                <a class="btn text-white btn-floating m-1" style="background-color: #55acee;" href="https://twitter.com/home" target="_blank" role="button"><i
-                        class="fab fa-twitter"></i></a>
+                <a class="btn text-white btn-floating m-1" style="background-color: #55acee;"
+                    href="https://twitter.com/home" target="_blank" role="button"><i class="fab fa-twitter"></i></a>
 
                 <!-- Google -->
-                <a class="btn text-white btn-floating m-1" style="background-color: #dd4b39;" href="https://www.google.co" target="_blank" role="button"><i
-                        class="fab fa-google"></i></a>
+                <a class="btn text-white btn-floating m-1" style="background-color: #dd4b39;"
+                    href="https://www.google.co" target="_blank" role="button"><i class="fab fa-google"></i></a>
 
                 <!-- Instagram -->
-                <a class="btn text-white btn-floating m-1" style="background-color: #ac2bac;" href="https://www.instagram.com/" target="_blank" role="button"><i
-                        class="fab fa-instagram"></i></a>
+                <a class="btn text-white btn-floating m-1" style="background-color: #ac2bac;"
+                    href="https://www.instagram.com/" target="_blank" role="button"><i class="fab fa-instagram"></i></a>
 
                 <!-- Linkedin -->
-                <a class="btn text-white btn-floating m-1" style="background-color: #0082ca;" href="https://www.linkedin.com/in/filip-svanda/" target="_blank" role="button"><i
+                <a class="btn text-white btn-floating m-1" style="background-color: #0082ca;"
+                    href="https://www.linkedin.com/in/filip-svanda/" target="_blank" role="button"><i
                         class="fab fa-linkedin-in"></i></a>
                 <!-- Github -->
-                <a class="btn text-white btn-floating m-1" style="background-color: #333333;" href="https://github.com/settings/profile" target="_blank" role="button"><i
+                <a class="btn text-white btn-floating m-1" style="background-color: #333333;"
+                    href="https://github.com/settings/profile" target="_blank" role="button"><i
                         class="fab fa-github"></i></a>
             </section>
             <!-- Section: Social media -->
