--- a/templates/crmapp/register.html
+++ b/templates/crmapp/register.html
@@ -14,14 +14,14 @@
             margin: 0;
             padding: 0;
             height: 100%;
-            background: #7abecc !important;
+            background: #343A40 !important;
         }
 
         .user_card {
             width: 350px;
             margin-top: auto;
             margin-bottom: auto;
-            background: #74cfbf;
+            background: #B1BE89;
             position: relative;
             display: flex;
             justify-content: center;
@@ -44,7 +44,7 @@
 
         .login_btn {
             width: 100%;
-            background: #33ccff !important;
+            background: #2F4858!important;
             color: white !important;
         }
 
