--- a/templates/crmapp/customer.html
+++ b/templates/crmapp/customer.html
@@ -6,16 +6,16 @@
 
 <div class="row">
     <div class="col-md">
-        <div class="card card-body">
+        <div id="total-orders" class="card card-body">
             <h5>Customer</h5>
             <hr>
             <!-- <a class="btn btn-outline-info btn-sm btn-block" href="{% url 'account' %}">Update
             Customer</a> -->
-            <a class="btn btn-outline-info btn-sm btn-block" href="{% url 'create_order' customer.id %}">Place Order</a>
+            <a class="btn btn-sm btn-block btn-color" href="{% url 'create_order' customer.id %}">Place Order</a>
         </div>
     </div>
     <div class="col-md">
-        <div class="card card-body">
+        <div id="total-orders" class="card card-body">
             <h5>Contact Information</h5>
             <hr>
             <p>Email: {{ customer.email }} </p>
@@ -23,7 +23,7 @@
         </div>
     </div>
     <div class="col-md">
-        <div class="card card-body">
+        <div id="total-orders" class="card card-body">
             <h5>Total Orders</h5>
             <hr>
             <h1 class="orders">{{ order_count }}</h1>
@@ -33,10 +33,10 @@
 <br>
 <div class="row">
     <div class="col">
-        <div class="card card-body">
+        <div class="card card-body form-color">
             <form method="get">
                 {{ myFilter.form }}
-                <button class="btn btn-primary" type="submit">Search</button>
+                <button class="btn btn-color" type="submit">Search</button>
             </form>
         </div>
     </div>
@@ -44,7 +44,7 @@
 <br>
 <div class="row">
     <div class="col-md">
-        <div class="card card-body">
+        <div class="card card-body form-color">
             <table class="table table-sm">
                 <tr>
                     <th>Product</th>
@@ -61,7 +61,7 @@
                     <td>{{ order.note }}</td>
                     <td>{{ order.date_created }}</td>
                     <td>{{ order.status }}</td>
-                    <td><a class="btn btn-sm btn-info" href="{% url 'update_order' order.id %}">Update</a></td>
+                    <td><a class="btn btn-sm btn-color" href="{% url 'update_order' order.id %}">Update</a></td>
 
 					<td><a class="btn btn-sm btn-danger" href="{% url 'delete_order' order.id %}">Delete</a></td>
                 </tr>
