--- a/templates/crmapp/dashboard.html
+++ b/templates/crmapp/dashboard.html
@@ -8,8 +8,8 @@
 
 <div class="row">
     <div class="col-md-5">
-        <h5>CUSTOMERS:</h5>
-        <div class="card card-body">
+        <h5 class="text-color">CUSTOMERS:</h5>
+        <div class="card card-body form-color">
             <!-- <a class="btn btn-primary  btn-sm btn-block" href="">Create Customer</a> -->
             <table class="table table-sm">
                 <tr>
@@ -20,7 +20,7 @@
 
                 {% for customer in customers %}
                 <tr>
-                    <td><a class="btn btn-sm btn-info" href="{% url 'customer' customer.id %}">View</a></td>
+                    <td><a class="btn btn-sm btn-view" href="{% url 'customer' customer.id %}">View</a></td>
                     <td>{{ customer.name }}</td>
                     <td>{{ customer.phone }}</td>
                 </tr>
@@ -31,8 +31,8 @@
     </div>
 
     <div class="col-md-7">
-        <h5>LAST ORDERS</h5>
-        <div class="card card-body">
+        <h5 class="text-color">LAST ORDERS</h5>
+        <div class="card card-body form-color">
             <table class="table table-sm">
                 <tr>
                     <th>Product</th>
@@ -48,7 +48,7 @@
                     <td>{{ order.product }}</td>
                     <td>{{ order.date_created }}</td>
                     <td>{{ order.status }}</td>
-                    <td><a class="btn btn-sm btn-info" href="{% url 'update_order' order.id %}">Update</a></td>
+                    <td><a class="btn btn-sm btn-color" href="{% url 'update_order' order.id %}">Update</a></td>
                     <td><a class="btn btn-sm btn-danger" href="{% url 'delete_order' order.id %}">Delate</a></td>
 
                 </tr>
