--- a/templates/crmapp/order_form.html
+++ b/templates/crmapp/order_form.html
@@ -4,7 +4,7 @@
 
 <div class="row">
     <div class="col-md-6">
-        <div class="card card-body">
+        <div class="card card-body form-color">
 
             <form action="" method="POST">
                 {% csrf_token %}
