--- a/templates/crmapp/products.html
+++ b/templates/crmapp/products.html
@@ -6,10 +6,10 @@
 
 <div class="row">
     <div class="col-md">
-        <div class="card card-body">
+        <div class="card card-body form-color">
             <h5>Products</h5>
         </div>
-        <div class="card card-body">
+        <div class="card card-body form-color">
             <table class="table">
                 <tr>
                     <th>Product</th>
