--- a/templates/crmapp/user.html
+++ b/templates/crmapp/user.html
@@ -6,7 +6,7 @@
 
 <div class="row">
     <div class="col-md">
-        <div class="card card-body">
+        <div class="card card-body form-color">
             <table class="table table-sm">
                 <tr>
                     <th>Product</th>
