--- a/templates/crmapp/account_settings.html
+++ b/templates/crmapp/account_settings.html
@@ -9,7 +9,7 @@
 <div class="row">
     <div class="col-md-3">
         <div class="card card-body form-color">
-            <a class="btn btn-warning" href="{% url 'home' %}"> &#8592; Back to Profile</a>
+            <a class="btn btn-color" href="{% url 'home' %}"> &#8592; Back to Profile</a>
             <hr>
             <h3 style="text-align: center;">Account Settings</h3>
         </div>
@@ -19,7 +19,7 @@
             <form method="POST" action="" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ form.as_p }}
-                <input class="btn btn-primary" type="submit" name="Update Information">
+                <input class="btn btn-color" type="submit" name="Update Information">
             </form>
         </div>
     </div>
