--- a/templates/crmapp/delete.html
+++ b/templates/crmapp/delete.html
@@ -11,7 +11,7 @@
             <form action="{% url 'delete_order' item.id %}" method="POST">
                 {% csrf_token %}
                 <a class="btn btn-warning" href="{% url 'home' %}">Cancel</a>
-                <input class="btn btn-danger" type="submit" name="Confirm">
+                <input class="btn btn-color" type="submit" name="Confirm">
             </form>
         </div>
     </div>
