Change some html based on W3C testing

--- a/templates/crmapp/login.html
+++ b/templates/crmapp/login.html
@@ -3,7 +3,7 @@
 
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <!-- The document's head section containing metadata and links -->
@@ -29,7 +29,7 @@
                     <h3 id="form-title">LOGIN</h3>
                 </div>
                 <div class="d-flex justify-content-center form_container">
-                    <form method="POST" action="">
+                    <form method="POST">
                         <!-- Create a form with the 'POST' method -->
                         {% csrf_token %}
                         <!-- Include a CSRF token for security -->
