--- a/templates/crmapp/register.html
+++ b/templates/crmapp/register.html
@@ -3,7 +3,7 @@
 
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <!-- The document's head section containing metadata and links -->
@@ -27,7 +27,7 @@
                 <div class="d-flex justify-content-center form_container">
                     <!-- Create a container for the registration form -->
                     <!-- Which contains fields for registration data -->
-                    <form method="POST" action="">
+                    <form method="POST">
                         <!-- Create a form with the 'POST' method -->
                         {% csrf_token %}
                         <!-- Include the CSRF token for security -->
